--- a/LiveStreaming2/LiveStreaming2/Base.lproj/Main.storyboard
+++ b/LiveStreaming2/LiveStreaming2/Base.lproj/Main.storyboard
@@ -88,12 +88,27 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dzj-fu-PPN">
+                                <rect key="frame" x="262" y="508" width="77" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="72" id="NdJ-Fj-KHE"/>
+                                    <constraint firstAttribute="width" constant="77" id="axg-4s-pmc"/>
+                                </constraints>
+                                <state key="normal" title="Stop" backgroundImage="Stop Filled-100">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="G5x-qD-ZSD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="dzj-fu-PPN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6gg-mu-G0V"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ZwA-yK-iEJ" secondAttribute="trailing" id="PK7-qG-Pih"/>
                             <constraint firstItem="ZwA-yK-iEJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ahb-2G-4RQ"/>
                             <constraint firstAttribute="leadingMargin" secondItem="ZwA-yK-iEJ" secondAttribute="leading" id="bn0-ji-M14"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dzj-fu-PPN" secondAttribute="bottom" constant="20" id="xVC-Hn-qRc"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Alert Cam" id="zPp-wX-VGv">
@@ -105,6 +120,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="recordingLabel" destination="ZwA-yK-iEJ" id="4rl-No-1JA"/>
+                        <outlet property="stopButton" destination="dzj-fu-PPN" id="c78-rZ-bsC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -150,5 +166,6 @@
     </scenes>
     <resources>
         <image name="Settings-32" width="32" height="32"/>
+        <image name="Stop Filled-100" width="100" height="100"/>
     </resources>
 </document>
